--- a/11.tex
+++ b/11.tex
@@ -1,4 +1,3 @@
-
 \documentclass{article}
 \usepackage[a4paper,left=3.5cm,right=2.5cm,top=2.5cm,bottom=2.5cm]{geometry}
 %%\usepackage[MeX]{polski}
@@ -18,8 +17,7 @@
 \begin{equation}
 \lim_{x \to \infty} \sum_{k=1}^{\infty}=\frac{1}{k^2}  = \frac{\pi^2}{6}
 \end{equation}
-[x]_A={y\in U:a(x)=a(y),\forall a\in A}, Where~ the~ central~ object~ x\in U
-
-cos(20)=cos^20-sin^2~0
+$[x]_A={y\in U:a(x)=a(y),\forall a\in A}, Where~ the~ central~ object~ x\in U$
+$cos(20)=cos^20-sin^2~0$
 \end{equation}
 \end{document}
